--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "chalk": "^1.1.3",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "http": "0.0.0",
